# CeleryProject

EscopoProjetoCCR/: Dockerfile  extrair_imagens.py  pyproject.toml
EscopoProjetoCCR/app/: main.py  tasks.py
EscopoProjetoCCR/celery_conf/: celery.py
EscopoProjetoCCR/env/: pyvenv.cfg
EscopoProjetoCCR/env/Scripts/: activate  activate.bat  activate.fish  activate.nu  dul-receive-pack  dul-upload-pack
EscopoProjetoCCR/source/infra/db/: settings.py
